css/styles.css
@font-face {
  font-family: 'Cera Pro Black';
  src: url('../static/fonts/cera-pro/Cera\ Pro\ Black.otf');
}
@font-face {
    font-family: 'Cera Pro Medium';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Medium.otf');
}
@font-face {
    font-family: 'Cera Pro Bold';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Bold.otf');
}
@font-face {
    font-family: 'Cera Pro Regular';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Regular.otf');
}
@font-face {
    font-family: 'Cera Pro Thin';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Light.otf');
}

html{
    scroll-behavior: smooth;
}

:root{
    --gradient: linear-gradient(90deg, #7237BD 0%, #FD0988 99.8%);
    --text-gradient:-webkit-linear-gradient(0deg, #FCDC00 0%
    ,#FBC519 10%
    ,#FA954E 32%
    ,#F96E79 53%
    ,#F95397 72%
    ,#F83CB0 100%);
}

body{
    background-color: #191930;
    background-repeat: no-repeat;
    /* background-image:  url("../static/images/cloud_1.svg"), url("../static/images/cloud_0.svg"); */
    /* background-image:   url("../static/images/cloud_2.svg"); */
    /* background-size: 70%; */
    /* background-position-y: -20vh; */
    /* background-position-x: 50%; */
    font-family: 'Cera Pro Regular', sans-serif !important;
    color: #fff;
}

main{
    max-width: 96vw;
    margin: 2vw auto;
    display: flex;
    flex-direction: column;
    background-color: #0d0b179f;
    border-radius: 2vw;
}

.section{
    padding: calc(2vw + 1vh) 3vw;
}

#hero{
    background-image:  url("../static/images/cloud_1.svg");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 50% 25%;
    min-height: 100vh;
}

.nav-link {
    font-family: 'Cera Pro Medium';
}

.navbar-toggler{
    border: none;
}


.hero__text{
    color: #fff;
    font-size: calc(1.5vw + 1vh);
    font-family: 'Cera Pro Medium';
    line-height: 3rem;
    /* letter-spacing: 0.2rem; */
    font-weight: 300;
}
.hero__text span:nth-of-type(1){
    font-family: 'Cera Pro Medium';
    font-size: calc(9vw + 1vh);
    letter-spacing: 1.8rem;
    line-height: 8rem;
    font-weight: 400;
}
.hero__text span:nth-of-type(2){
    font-family: 'Cera Pro Medium';
    font-size: calc(2.7vw + 1vh);
    letter-spacing: 1.8rem;
    line-height: 4rem;
}

.hero__strokes{
    margin-left: auto;
    margin-right: 3rem;
}


/*  About Section*/

.title{
    font-family: 'Cera Pro Medium';
    font-size: 3rem;
    font-weight: 400;
}
  
.title {
    position: relative;
    width: 100%;
}

.title::before {
    content: "";
    position: absolute;
    top: 0;
    width: 50%;
    left: 0;
    height: 3px;
    border-radius: 2px;
    background: var(--gradient);
}
.title::after {
    content: attr(data-after-content);
    position: absolute;
    font-size: 0.8rem;
    line-height: 1;
    left: 52%;
    top: -6px;
    width: 100%;
    height: fit-content;
    text-transform: uppercase;
    font-family: 'Cera Pro Light', sans-serif;  
}

.about__text{
    font-size: 1.2rem;
    line-height: 2.5rem;
    letter-spacing: 0.1rem;
    padding: 1rem 2rem 1rem 0;
}
.about__text.gradient{
    background: var(--text-gradient);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Gradient Button */ 
button.btn-outline-light.gradient {
    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
    border: solid 3px transparent;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
    background-origin: border-box;
    background-clip: content-box, border-box;
    box-shadow: 2px 1000px 1px #111020 inset;
}
  
button.btn-outline-light.gradient:hover {
    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
    border: solid 3px transparent;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
    background-origin: border-box;
    background-clip: content-box, border-box;
}

/* Services Section */
#services{
    background: url('../static/images/services/bg.svg');
    background-repeat: no-repeat;
    background-size: contain;
}

.service-icon{
    height: calc(2vw + 2vh);
    width: calc(2vw + 2vh);
}


.service__card{
    border-radius: 35px;
    height: 413.7px;
    background: url('../static/images/frame.svg') !important;
    background-repeat: no-repeat !important;
    background-size: 100% !important;
    width: 302.15px;
    background-position: center;
    margin: auto;
}

/* .service__card > div{
    background: transparent;
    border-radius: 10px;
    border: 1px solid #fff;
} */

.service__card > div{
    background: transparent;
}


.service__card > div:nth-of-type(odd){
    background: linear-gradient(49.88deg, #38344F 4.62%, #AE66C8 95.2%);
    border-radius: 35px;
    height: 206.5px;
}

.wave__stroke{
    max-width: 15vw;
    position: absolute;
    right: 0;
    top:-16vh;
}


.MultiCarousel {
    float: left;
    overflow: hidden;
    padding: 15px;
    width: 100%;
    position:relative;
}
.MultiCarousel .MultiCarousel-inner {
    transition: 1s ease all;
    float: left;
}
.MultiCarousel .MultiCarousel-inner .item {
    float: left;
}
.MultiCarousel .MultiCarousel-inner .item > div {
    text-align: center;
    padding:10px;
    margin:10px;
    background:#f1f1f1;
    color:#666;
}
.MultiCarousel .leftLst, .MultiCarousel .rightLst {
    position:absolute;
    border-radius:50%;
   top:calc(50% - 20px);
}
.MultiCarousel .leftLst {
    left:0;
}
.MultiCarousel .rightLst {
    right:0;
}
.MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over {
    pointer-events: none;
    background:#ccc;
}


.carousel-indicators li{
    background-color: transparent !important;
    border-radius: 50%;
    width: 1rem !important;
    height: 1rem !important;
    border: 2px solid #fff !important;
}

.carousel-indicators li.active{
    background-color: #FB0988 !important;
    border: 2px solid #FB0988 !important;
}


#update-carousel .card{
    border: none;
}

#update-carousel .card-body{
    position: absolute;
    text-align: left;
    bottom: 0;
    left: 0;
    width: 100%;
    border: none;
    background: linear-gradient(90deg, rgba(114, 55, 189, 0.62) 0%, rgba(253, 9, 136, 0.62) 99.8%);
}

#update-carousel .card-title{
    font-family: 'Cera Pro Regulars';
    font-size: 0.8rem;
    font-weight: 400;
}

#update-carousel .card-text{
    font-family: 'Cera Pro Regular';

}


/* LATEST UPDATES SECTION */
.custom-grid{
    display: grid;
    grid-template-columns: 1fr 0.7fr;
    width: 100%;
    align-items: center;
    column-gap: 2rem;
    min-height: 50vh;
}
/* .grid-left{
    
} */
.grid-left > .card{
    height: 300px;
}
.grid-left>.card>img {
    object-fit: cover;
    height: 100%;
}
.grid-right{
    display: flex;
    flex-direction: column;
    row-gap: 2rem;
}
.grid-right > .card{
    height: 133px;
    overflow: hidden;
}
.card > img{
    object-fit: cover;
}

@media screen and (max-width: 1440px) {
    .service__card{
        scale: 0.8;
    }
}

@media screen and (max-width: 600px) {
    body{
        background-size: 80vh;
        background-position: 50% 10%;
    }
    main{
        max-width: 100vw;
        border-radius: none;
        margin: 0;
    }
    #hero{
        background-size: 120%;
        background-position: center;
        min-height: auto;
    }
    .container-fluid{
        border-radius: 0px;
    }
    .hero__text{
        font-size: 2rem;
        line-height: 3rem;
        letter-spacing: 0.1rem;
    }
    .hero__text span:nth-of-type(1){
        font-size: 4rem;
        letter-spacing: 0.5rem;
        line-height: 5.5rem;
    }
    .hero__text span:nth-of-type(2){
        font-size: 1.6rem;
        letter-spacing: 0.5rem;
    }
    .hero__strokes{
        height: 8rem;
        padding: 0;
        margin-right: 0;
    }
    .title{
        font-family: 'Cera Pro Medium';
        font-size: 1.8rem;
        letter-spacing: 0.1rem;
    }
    .navbar-brand>img{
        width: 10rem;
    }
    .service__card{
        height: 300px;
        width: 200px;
        margin: 0 auto;
    }
    .service__card > div:nth-of-type(odd){
        background: linear-gradient(49.88deg, #38344F 4.62%, #AE66C8 95.2%);
        border-radius: 35px;
        height: 150px;
    }
    .service-icon{
        height: calc(3vw + 3vh);
        width: calc(3vw + 3vh);
    }
    .wave__stroke{
        max-width: 15vw;
        position: absolute;
        right: 0;
        top:-10vh;
    }
    .fa-2x{
        scale: 0.8;
    }
    .client__text{
        font-size: calc(0.8vw + 0.8vh);
    }

}

